replace h2 with postgresql and improve error handling in user module

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -6,17 +6,17 @@ bootcamp {
       apiUri="http://api.smartrecruiters.com"
     }
     defaultAdminUser {
-      firstName="Test",
-      lastName="Test",
-      email="test@test.com",
+      firstName="Test"
+      lastName="Test"
+      email="test@test.com"
       password="test"
     }
   }
   db {
-    url="jdbc:h2:mem:test;DB_CLOSE_DELAY=-1"
-    user=""
+    url="jdbc:postgresql:bootcamp"
+    user="postgres"
     password=""
-    driver="org.h2.Driver"
+    driver="org.postgresql.Driver"
     connections = {
       poolSize = 10
     }
