add db migrations via flyway

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -18,6 +18,7 @@ bootcamp {
     user="postgres"
     password=""
     driver="org.postgresql.Driver"
+    migration=true
     connections = {
       poolSize = 10
     }
