change admin email in reference.conf

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -9,7 +9,7 @@ bootcamp {
     defaultAdminUser {
       firstName="Test"
       lastName="Test"
-      email="test@test.com"
+      email="admin@evolution.com"
       password="test"
     }
   }
